@startuml TasklyApp_Slide_Architecture
!theme plain
skinparam linetype ortho
skinparam padding 20
skinparam fontSize 14
skinparam defaultFontName Arial
skinparam maxClassWidth 300

title Taskly - Complete Architecture

' ====================================================
' LAYER 1: APP ENTRY
' ====================================================
package "🔷 APP LAYER" #FF6B6B {
    class TasklyApp {
        Initialize App
        Setup SwiftData Schema
        Configure ModelContainer
    }
}

' ====================================================
' LAYER 2: NAVIGATION
' ====================================================
package "🔶 NAVIGATION LAYER" #FFA726 {
    class ContentView {
        Tab Navigation Hub
        Route to 5 Main Views
        Welcome Sheet Manager
    }
}

' ====================================================
' LAYER 3: MAIN VIEWS
' ====================================================
package "🟡 MAIN VIEWS (5 Tabs)" #FFD54F {
    class HomeView {
        Dashboard & Overview
    }
    class NotesView {
        Notes & Folders List
    }
    class CalendarView {
        Calendar & Tasks
    }
    class DrawingNotesView {
        Drawing Gallery
    }
    class ScheduleView {
        Course Schedule
    }
}

' ====================================================
' LAYER 4: SUB-VIEWS & SERVICES
' ====================================================
package "🟢 NOTES SUB-VIEWS" #A5D6A7 {
    class AddNoteView {
        Create Note
    }
    class NoteDetailView {
        View/Edit Note
        Export PDF/TXT
    }
    class AddFolderView {
        Create Folder
    }
}

package "🔵 CALENDAR SUB-VIEWS" #81C784 {
    class AddTaskView {
        Create Task
        Set Reminder
    }
    class EditTaskView {
        Edit Task
        Toggle Complete
    }
}

package "🟣 DRAWING SUB-VIEWS" #BA68C8 {
    class AddDrawingView {
        New Drawing
    }
    class DrawingCanvasView {
        Edit Drawing
        Export PDF
    }
}

package "⚫ SCHEDULE SUB-VIEWS" #78909C {
    class AddCourseView {
        Create Course
    }
    class EditCourseView {
        Edit Schedule
    }
}

package "🔧 SHARED SERVICES" #FFE0B2 {
    class CalendarManager {
        Request Access
        Fetch/Save Events
    }
    class NotificationManager {
        Schedule Reminders
        Cancel Notifications
    }
    class NoteSaver {
        Validate & Save Notes
    }
    class CanvasView {
        PencilKit Wrapper
        Drawing Interface
    }
}

' ====================================================
' LAYER 5: UTILITIES & FRAMEWORKS
' ====================================================
package "📱 FRAMEWORKS" #C8E6C9 {
    class SwiftData {
        Data Persistence
        Model Queries
    }
    class EventKit {
        Calendar Access
        Event Management
    }
    class UserNotifications {
        Local Notifications
    }
    class PencilKit {
        Drawing Tools
    }
}

' ====================================================
' LAYER 6: DATA MODELS
' ====================================================
package "💾 DATA MODELS" #B2DFDB {
    class Folder {
        id, name, colorName
        sortOrder, notes[]
    }
    class Note {
        id, title, content
        createdAt, folder
    }
    class TaskItem {
        id, title, date
        isCompleted, reminder
    }
    class DrawingNote {
        title, drawingData
    }
    class Course {
        name, instructor
        location, schedule
    }
    class Home {
        userName
    }
}

' ====================================================
' CONNECTIONS: Main Flow
' ====================================================
TasklyApp --> ContentView: init
ContentView --> HomeView
ContentView --> NotesView
ContentView --> CalendarView
ContentView --> DrawingNotesView
ContentView --> ScheduleView

' ====================================================
' CONNECTIONS: Notes Workflow
' ====================================================
NotesView --> AddNoteView: creates
NotesView --> NoteDetailView: opens
NotesView --> AddFolderView: creates

' ====================================================
' CONNECTIONS: Calendar Workflow
' ====================================================
CalendarView --> AddTaskView: creates
CalendarView --> EditTaskView: edits

' ====================================================
' CONNECTIONS: Drawing Workflow
' ====================================================
DrawingNotesView --> AddDrawingView: creates
DrawingNotesView --> DrawingCanvasView: opens
AddDrawingView --> CanvasView: uses
DrawingCanvasView --> CanvasView: uses

' ====================================================
' CONNECTIONS: Schedule Workflow
' ====================================================
ScheduleView --> AddCourseView: creates
ScheduleView --> EditCourseView: edits

' ====================================================
' CONNECTIONS: Services
' ====================================================
AddNoteView --> NoteSaver: uses
NoteDetailView --> NoteSaver: uses
AddTaskView --> CalendarManager: syncs
AddTaskView --> NotificationManager: schedules
EditTaskView --> NotificationManager: updates
AddCourseView --> CalendarManager: syncs
EditCourseView --> CalendarManager: syncs

' ====================================================
' CONNECTIONS: External APIs
' ====================================================
CalendarManager --> EventKit: uses
NotificationManager --> UserNotifications: uses
CanvasView --> PencilKit: uses

' ====================================================
' CONNECTIONS: Data Layer
' ====================================================
NotesView --> SwiftData: queries
CalendarView --> SwiftData: queries
ScheduleView --> SwiftData: queries
DrawingNotesView --> SwiftData: queries
SwiftData --> Folder: manages
SwiftData --> Note: manages
SwiftData --> TaskItem: manages
SwiftData --> DrawingNote: manages
SwiftData --> Course: manages
SwiftData --> Home: manages

@enduml